--- a/EncourageWork/AndroidManifest.xml
+++ b/EncourageWork/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-sdk
         android:minSdkVersion="11"
         android:targetSdkVersion="16" />
+    <supports-screens android:smallScreens="false" android:normalScreens="true" android:largeScreens="true"/>
 
     <application
         android:allowBackup="true"
